2004-11-18  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpauth.c:
	    Darryl L. Miles  found a \0xB4 character in logfile
	    debug output data.  I didn't notice it myself, as my
	    display shows it nearly the same as "'".

2004-11-04  Matti Aarnio  <mea@zmailer.org>

	* proto/newdbprocessor.in:
	    Change in the way, how generated lookups are handled,
	    we have no need to NAME our passed on parameters at all.
	    Less pressure on variable lookup processing, and storage.

	* proto/cf/process.cf:
	    Remove unnecessary '\n' pair from "log info: recipients .."
	    line, thus removing unbalanced quote created in previous
	    patch.

2004-10-28  Matti Aarnio  <mea@zmailer.org>

	* proto/cf/standard.cf, proto/cf/process.cf:
	    Decrease amount of logging.  No point in logging all
	    manner of details into the router log file.
	    Place there only things that report about BIG PROBLEMS.

	* router/daemonsub.c, include/zmsignal.h, router/router.c:
	    (about those PROBLEMS...)
	    I have seen router processes failing with SEGV, but
	    without further information, understanding and fixing
	    them is difficult.  This patch uses SIGNAL_ACTION
	    machinery to process child deaths, and report also
	    the address at which the fault happened (program counter ?
	    pointed destination ?)  This SIGNAL_ACTION is implemented
	    as a macro, and it exists only in POSIX.1 branch.
	    If your system needs something else..  well, it
	    isn't then POSIX.1 compliant and we have to start
	    thinking about it then... Probably we could just
	    ingore it..

2004-10-24  Matti Aarnio  <mea@zmailer.org>

	* libsh/listmalloc.c:
	    Profiling claimed to show, that 70% of router's time
	    is spent in running garbage collection!  EErrgh.. Uh..
	    It was being called by every 8000 newcell() calls, and
	    the count of those calls per address appears to be in
	    order of 2000-2500 per address.  Also grew the conscell